# quench.nvim

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-test.txt
.github/workflows/: ci.yml  lint.yml  tests.yml
doc/: logo-ascii.txt
example/: README.md  animation-demo.py  example-usage.py  nvim-config-example.lua  quick-start.py  quick-state-test.py  test-kernel-states.py
lua/quench/: init.lua
rplugin/python3/quench/: __init__.py  kernel_session.py  ui_manager.py  web_server.py
rplugin/python3/quench/commands/: __init__.py  debug.py  execution.py  kernel_mgmt.py
rplugin/python3/quench/core/: __init__.py  async_executor.py  cell_parser.py  config.py
rplugin/python3/quench/frontend/: index.html  main.js
rplugin/python3/quench/utils/: __init__.py  notifications.py
tests/: __init__.py  conftest.py  roadmap.md  test_integration.py  test_quench_main.py  test_unit.py
tests/e2e/: test_neovim_instance.py  test_nvim_config.lua  test_quench_interrupt_kernel.py  test_quench_kernel_death.py  test_quench_kernel_start.py  test_quench_reset_kernel.py  test_quench_run_cell.py  test_quench_stop.py  test_shell_command_output.py
tests/integration/: test_integration.py
tests/manual/: test-death.py  test-kernel-states.py  test-state.py
tests/unit/: test_config.py  test_kernel_session.py  test_quench_plugin.py  test_ui_manager.py  test_web_server.py
