[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quench-nvim"
version = "0.1.0"
description = "Interactive Python development in Neovim using cell-based execution"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ryan Ressmeyer", email = "ryan.ressmeyer@example.com"}
]
keywords = ["neovim", "jupyter", "ipython", "python", "interactive", "repl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Editors",
    "Topic :: Software Development",
]

dependencies = [
    "pynvim>=0.4.3",
    "jupyter-client>=7.0.0",
    "aiohttp>=3.8.0",
    "websockets>=11.0.0",
]

[project.optional-dependencies]
# Development and testing dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

# All optional dependencies
all = [
    "quench-nvim[dev]",
]

[project.urls]
Homepage = "https://github.com/ryan-ressmeyer/quench.nvim"
Repository = "https://github.com/ryan-ressmeyer/quench.nvim"
"Bug Tracker" = "https://github.com/ryan-ressmeyer/quench.nvim/issues"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
    "requires_nvim: marks tests that require Neovim",
    "requires_jupyter: marks tests that require Jupyter",
]

[tool.coverage.run]
source = ["rplugin/python3/quench"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
